[package]
name = "R-Lib"
version = "1.0.0"
description = "A Research App"
authors = ["James Rose"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1", features = [] }
[workspaces]
members = [
    "libs/*",
]

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
control = {path = "libs/control", version = "0.1.0"}
#[workspaces]
#members = ["libs/*"]
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
